shipment is functional now, made some changes on front end styling

--- a/PPETracker/Views/Products/Dashboard.cshtml
+++ b/PPETracker/Views/Products/Dashboard.cshtml
@@ -41,17 +41,17 @@
                         <th>
                             @Html.DisplayNameFor(model => model.PhotoLink)
                         </th>
-                        <th>
+                        <th style="width:20%;">
                             @Html.DisplayNameFor(model => model.Name)
                         </th>
-                        <th>
+                        <th style="width:10%;">
                             @Html.DisplayNameFor(model => model.CategoryName)
                         </th>
 
-                        <th>
+                        <th style="width:15%;">
                             @Html.DisplayNameFor(model => model.Brand)
                         </th>
-                        <th>
+                        <th style="width:10%;">
                             @Html.DisplayNameFor(model => model.Quantity)
                         </th>
                         <th></th>
