--- a/PPETracker/Views/Shipments/Dashboard.cshtml
+++ b/PPETracker/Views/Shipments/Dashboard.cshtml
@@ -82,7 +82,14 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.RecipientName)
                             <td>
-                                <button class="btn btn-success btn-responsive" onclick="ShipShipment('@item.ID')">Ship</button>
+                                @if (item.ShippedStatus == "N")
+                                {
+                                    <button class="btn btn-success btn-responsive" onclick="ShipShipment('@item.ID')">Ship</button>
+                                }
+                                else
+                                {
+                                    <button class="btn btn-success btn-responsive" disabled>Ship</button>
+                                }
                                 <button class="btn btn-info btn-responsive" onclick="ViewProductDetails('@item.ID')">Details</button>
                                 @Html.ActionLink("Edit", "Edit", "Products", new { id = item.ID }, new { @class = "btn btn-primary btn-responsive" })
                                 <button class="btn btn-danger btn-responsive" onclick="DeleteProduct('@item.ID')">Delete</button>
@@ -90,7 +97,7 @@
                         </tr>
                     }
                 </tbody>
-            </table>
+            </table> 
         </div>
     </div>
 </div>
@@ -147,9 +154,8 @@
             var url = '@Url.Action("Ship", "Shipments")?shipmentID=' + idNum;
             $('#shipShipment').load(url,
                 function () {
-                    //$.validator.unobtrusive.parse("#updateQuantityModal");
                     //display modal
-                    $('#updateQuantityModal').modal('show');
+                    $('#shipShipmentModal').modal('show');
                 }
             );
         }
