--- a/PPETracker/wwwroot/css/site.css
+++ b/PPETracker/wwwroot/css/site.css
@@ -4,7 +4,8 @@ for details on configuring this project to bundle and minify static web assets. 
 a.navbar-brand {
   white-space: normal;
   text-align: center;
-  word-break: break-all;
+  /*word-break: break-all;*/
+  word-break: normal;
 }
 
 /* Provide sufficient contrast against white background */
@@ -125,7 +126,7 @@ h1 {
 .logo-title {
     font-family: 'Commissioner', 'Segoe UI', sans-serif;
     font-size: 1.3rem !important;
-    display: block !important;
+    /*display: block !important;*/
 }
 
 .navbar-color-all {
