--- a/PPETracker/Views/Shipments/Dashboard.cshtml
+++ b/PPETracker/Views/Shipments/Dashboard.cshtml
@@ -90,9 +90,17 @@
                                 {
                                     <button class="btn btn-success btn-responsive" disabled>Ship</button>
                                 }
-                                <button class="btn btn-info btn-responsive" onclick="ViewProductDetails('@item.ID')">Details</button>
-                                @Html.ActionLink("Edit", "Edit", "Products", new { id = item.ID }, new { @class = "btn btn-primary btn-responsive" })
-                                <button class="btn btn-danger btn-responsive" onclick="DeleteProduct('@item.ID')">Delete</button>
+                                <button class="btn btn-info btn-responsive" onclick="ViewShipmentDetails('@item.ID')">Details</button>
+                                @if (item.ShippedStatus == "N")
+                                {
+                                    @Html.ActionLink("Edit", "Edit", "Shipments", new { id = item.ID }, new { @class = "btn btn-primary btn-responsive" })
+                                    <button class="btn btn-danger btn-responsive" onclick="DeleteShipment('@item.ID')">Delete</button>
+                                }
+                                else
+                                {
+                                    <button class="btn btn-primary btn-responsive" disabled>Edit</button>
+                                    <button class="btn btn-danger btn-responsive" disabled>Delete</button>
+                                }
                             </td>
                         </tr>
                     }
@@ -160,27 +168,27 @@
             );
         }
 
-        @*function ViewProductDetails(idNum) {
-            //call controller action to get product details and return partial view
-            var url = '@Url.Action("Details", "Products")?productID=' + idNum;
-            $('#prodDetails').load(url,
+        function ViewShipmentDetails(idNum) {
+            //call controller action to get shipment details and return partial view
+            var url = '@Url.Action("Details", "Shipments")?shipmentID=' + idNum;
+            $('#shipDetails').load(url,
                 function () {
                     //display modal
-                    $('#prodDetailsModal').modal('show');
+                    $('#shipDetailsModal').modal('show');
                 }
             );
         }
 
-        function DeleteProduct(idNum) {
+        function DeleteShipment(idNum) {
             //call controller action to get product details and return partial view
-            var url = '@Url.Action("Delete", "Products")?productID=' + idNum;
-            $('#prodDelete').load(url,
+            var url = '@Url.Action("Delete", "Shipments")?shipmentID=' + idNum;
+            $('#shipDelete').load(url,
                 function () {
                     //display modal
-                    $('#productDeleteModal').modal('show');
+                    $('#deleteShipmentModal').modal('show');
                 }
             );
-        }*@
+        }
     </script>
 
 }
