--- a/PPETracker/Views/Shipments/_Ship.cshtml
+++ b/PPETracker/Views/Shipments/_Ship.cshtml
@@ -8,11 +8,18 @@
                     <div class="modal-header">
                         <h3 class="modal-title">Ship Shipment</h3>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;s</span>
+                            <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        <h3 style="text-align: center; margin-bottom: 20px !important;">Are you sure you want to ship Shipment @Model.ID?</h3>
+                        @if (ViewBag.HasZeroItems == true)
+                        {
+                            <h3 style="text-align: center; margin-bottom: 20px !important;">Shipment @Model.ID cannot be shipped with zero items</h3>
+                        }
+                        else
+                        {
+                            <h3 style="text-align: center; margin-bottom: 20px !important;">Are you sure you want to ship Shipment @Model.ID?</h3>
+                        }
                         <div class="row">
                             <div class="col-sm-6">
                                 <dl>
@@ -51,7 +58,7 @@
                                         }
                                         else
                                         {
-                                            @Html.DisplayFor(model => model.ActualShipDate)
+                                            @string.Format("{0:MM/dd/yy}", Model.ActualShipDate)
                                         }
                                     </dd>
                                     <dt>
@@ -86,7 +93,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        @foreach(var item in Model.ProductsOnShipment)
+                                        @foreach (var item in Model.ProductsOnShipment)
                                         {
                                             <tr>
                                                 <td>@item.ID</td>
@@ -98,10 +105,18 @@
                                 </table>
                             </div>
                         </div>
+                        @if (ViewBag.HasZeroItems == true)
+                        {
+                            <button type="submit" class="btn btn-primary" disabled>Ship Shipment</button>
+                        }
+                        else
+                        {
+                            <button type="submit" class="btn btn-primary">Ship Shipment</button>
+                        }
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary">Ship Shipment</button>
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        
                     </div>
                 </form>
             </div>
