--- a/PPETracker/Views/Shipments/Create.cshtml
+++ b/PPETracker/Views/Shipments/Create.cshtml
@@ -16,7 +16,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ScheduledShipDate" class="control-label"></label>
-                <input type="text" name="ScheduledShipDate" id="scheduled-ship-date" class="form-control" value="@Model.ScheduledShipDate" />
+                <input type="text" name="ScheduledShipDate" id="scheduled-ship-date" class="form-control" value="@Model.ScheduledShipDate.ToString("MM/dd/yy")" />
                 <span asp-validation-for="ScheduledShipDate" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -29,7 +29,7 @@
             <div class="form-group">
                 <label asp-for="Comments" class="control-label"></label>
                 <textarea asp-for="Comments" class="form-control"></textarea>
-                <span asp-validation-for="RecipientID" class="text-danger"></span>
+                <span asp-validation-for="Comments" class="text-danger"></span>
             </div>
 
             <div class="form-group">
@@ -307,6 +307,7 @@
         });
 
         function ViewProductDetails(idNum) {
+            event.preventDefault();
             //call controller action to get product details and return partial view
             var url = '@Url.Action("Details", "Products")?productID=' + idNum;
             $('#prodDetails').load(url,
