--- a/PPETracker/Views/Shipments/_Delete.cshtml
+++ b/PPETracker/Views/Shipments/_Delete.cshtml
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <form asp-controller="Shipments" asp-action="Ship" method="post" class="form-horizontal">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="modal-header">
+                <div class="modal-header modal-header-color">
                     <h3 class="modal-title">Delete Shipment</h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
