--- a/PPETracker/Views/Shipments/_Details.cshtml
+++ b/PPETracker/Views/Shipments/_Details.cshtml
@@ -3,8 +3,7 @@
 <div class="modal fade" id="shipDetailsModal" tabindex="-1" role="dialog" aria-labelledby="shipDetailsModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="modal-header">
+                <div class="modal-header modal-header-color">
                     <h3 class="modal-title">Shipment Details</h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
