--- a/PPETracker/Views/Shipments/Dashboard.cshtml
+++ b/PPETracker/Views/Shipments/Dashboard.cshtml
@@ -93,7 +93,7 @@
                                 <button class="btn btn-info btn-responsive" onclick="ViewShipmentDetails('@item.ID')">Details</button>
                                 @if (item.ShippedStatus == "N")
                                 {
-                                    @Html.ActionLink("Edit", "Edit", "Shipments", new { id = item.ID }, new { @class = "btn btn-primary btn-responsive" })
+                                    @Html.ActionLink("Edit", "Edit", "Shipments", new { shipmentID = item.ID }, new { @class = "btn btn-primary btn-responsive" })
                                     <button class="btn btn-danger btn-responsive" onclick="DeleteShipment('@item.ID')">Delete</button>
                                 }
                                 else
