--- a/PPETracker/Views/Shipments/_Delete.cshtml
+++ b/PPETracker/Views/Shipments/_Delete.cshtml
@@ -3,7 +3,7 @@
 <div class="modal fade" id="deleteShipmentModal" tabindex="-1" role="dialog" aria-labelledby="deleteShipmentModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <form asp-controller="Shipments" asp-action="Ship" method="post" class="form-horizontal">
+            <form asp-controller="Shipments" asp-action="Delete" method="post" class="form-horizontal">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="modal-header modal-header-color">
                     <h3 class="modal-title">Delete Shipment</h3>
